--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -250,11 +250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "xDW1hZX3a_1w"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{'query': '코드패드는 무엇이고 어떻게 사용하나요?', 'result': '**코드패드란?**  \\nBlueJ 코드패드는 자바 코드(표현식 또는 명령문)의 일부분을 **빠르고 간편하게 실행/평가**할 수 있는 도구입니다. 프로그램 코드의 동작을 테스트하거나 구문을 예증하는 데 유용합니다.  \\n\\n---\\n\\n### **코드패드 사용 방법 (단계별)**  \\n1. **코드패드 열기**  \\n   - BlueJ 메인 화면에서 **보기(Show) 메뉴** → **\"코드패드 보기(Show Code Pad)\"**를 선택합니다.  \\n   - 또는 단축키 `Ctrl+Alt+C`(Windows/Linux) 또는 `Cmd+Option+C`(Mac)를 사용할 수 있습니다. *(단, 문서에 명시되지 않은 단축키는 제외)*  \\n\\n2. **코드 입력 및 실행**  \\n   - 코드패드 영역에 자바 표현식 또는 명령문을 입력합니다.  \\n     - 예: `2 + 3`, `System.out.println(\"Hello\")`  \\n   - **Enter 키**를 눌러 코드를 실행합니다. 결과는 화면 아래에 표시됩니다.  \\n\\n3. **이전 입력 재사용**  \\n   - **상하 화살표 키**를 눌러 이전에 입력한 코드 이력을 확인하고 재사용할 수 있습니다.  \\n   - 이력 내용을 수정한 후 다시 실행할 수도 있습니다.  \\n\\n4. **기능 제한 사항**  \\n   - 코드패드는 **클래스 정의나 전체 프로그램은 실행할 수 없으며**, 단일 표현식/명령문만 평가 가능합니다.  \\n   - 문서에서 명시되지 않은 추가 기능(예: 디버깅)은 지원하지 않습니다.  \\n\\n---  \\n**참고**: 문서에 없는 정보(예: 단축키, 클래스 실행 가능 여부)는 \"문서에서 찾을 수 없습니다\"로 답변합니다.', 'source_documents': [Document(id='85c6f820-041e-4431-985a-4f37bb069775', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 1, 'page_label': '2'}, page_content='6. 코드패드 사용하기 ··················································· ······························································· ········· 21'), Document(id='e0613533-3e9b-4ee2-9289-cb3d2021e8ba', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 20, 'page_label': '21'}, page_content='216. 코드패드의 사용\\nBlueJ 코드패드는 자바 코드(표현식과 명령문)의 일부분을 쉽고 빠르게 평가할 수 있는 기능을 \\n제공합니다. 따라서, 코드패드는 자바언어로 작성된 프로그램 코드의 의미를 상세히 조사하거나 구문을 예증하고 시험하는데 사용할 수 있 습니다.\\n6.1. 코드패드 나타내기'), Document(id='bf2ef5bc-6678-4932-a3be-507438571268', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 22, 'page_label': '23'}, page_content='요 약 코드패드에 명령문들을 입력하여 실행시킬 수 있습니다.'), Document(id='637f948f-c624-481e-bae1-008ccad2583b', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 24, 'page_label': '25'}, page_content='코드패드에서는 사용자가 이전에 입력한 내용들에 대한 이력을 저장하고 있습니다. 상하 화살표를 \\n이용하여 이전에 입력한 내용을 손쉽게 다시 입력시킬 수 있을 뿐만 아니라, 이전에 입력했던 내용을 수정하여 재입력시킬 수도 있습니다.   요 약 입력이력을 사용하기 위해서는 상하 화살표를 사용하십시오.'), Document(id='710475b6-635d-4002-bdc1-249c0b565eb4', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 1, 'page_label': '2'}, page_content='6.1. 코드패드 보기 ················································ ······························································· ··········· 21'), Document(id='26fce9c2-c340-41b9-9601-ca4aa4c8142b', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 20, 'page_label': '21'}, page_content='코드패드 영역에는 표현식 또는 문장들을 입력할 수 있습니다. 키보드의 Enter를 누르면 \\n입력된 표현식 또는 문장이 라인단위로 평가되어 그 결과가 화면에 나타납니다.\\n그림 13 : 코드패드를 나타낸 메인화면  요 약  코드패드를 사용하기 위해 보기메뉴에서 코드패드보기(Show Code Pad)를 \\n 선택하십시오')]}\n"
+     ]
+    }
+   ],
    "source": [
     "query = \"코드패드는 무엇이고 어떻게 사용하나요?\"\n",
     "query_result = chain.invoke(query)\n",
@@ -264,18 +273,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'**코드패드란?**  \\nBlueJ 코드패드는 자바 코드(표현식 또는 명령문)의 일부분을 **빠르고 간편하게 실행/평가**할 수 있는 도구입니다. 프로그램 코드의 동작을 테스트하거나 구문을 예증하는 데 유용합니다.  \\n\\n---\\n\\n### **코드패드 사용 방법 (단계별)**  \\n1. **코드패드 열기**  \\n   - BlueJ 메인 화면에서 **보기(Show) 메뉴** → **\"코드패드 보기(Show Code Pad)\"**를 선택합니다.  \\n   - 또는 단축키 `Ctrl+Alt+C`(Windows/Linux) 또는 `Cmd+Option+C`(Mac)를 사용할 수 있습니다. *(단, 문서에 명시되지 않은 단축키는 제외)*  \\n\\n2. **코드 입력 및 실행**  \\n   - 코드패드 영역에 자바 표현식 또는 명령문을 입력합니다.  \\n     - 예: `2 + 3`, `System.out.println(\"Hello\")`  \\n   - **Enter 키**를 눌러 코드를 실행합니다. 결과는 화면 아래에 표시됩니다.  \\n\\n3. **이전 입력 재사용**  \\n   - **상하 화살표 키**를 눌러 이전에 입력한 코드 이력을 확인하고 재사용할 수 있습니다.  \\n   - 이력 내용을 수정한 후 다시 실행할 수도 있습니다.  \\n\\n4. **기능 제한 사항**  \\n   - 코드패드는 **클래스 정의나 전체 프로그램은 실행할 수 없으며**, 단일 표현식/명령문만 평가 가능합니다.  \\n   - 문서에서 명시되지 않은 추가 기능(예: 디버깅)은 지원하지 않습니다.  \\n\\n---  \\n**참고**: 문서에 없는 정보(예: 단축키, 클래스 실행 가능 여부)는 \"문서에서 찾을 수 없습니다\"로 답변합니다.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query_result['result']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(id='85c6f820-041e-4431-985a-4f37bb069775', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 1, 'page_label': '2'}, page_content='6. 코드패드 사용하기 ··················································· ······························································· ········· 21'),\n",
+       " Document(id='e0613533-3e9b-4ee2-9289-cb3d2021e8ba', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 20, 'page_label': '21'}, page_content='216. 코드패드의 사용\\nBlueJ 코드패드는 자바 코드(표현식과 명령문)의 일부분을 쉽고 빠르게 평가할 수 있는 기능을 \\n제공합니다. 따라서, 코드패드는 자바언어로 작성된 프로그램 코드의 의미를 상세히 조사하거나 구문을 예증하고 시험하는데 사용할 수 있 습니다.\\n6.1. 코드패드 나타내기'),\n",
+       " Document(id='bf2ef5bc-6678-4932-a3be-507438571268', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 22, 'page_label': '23'}, page_content='요 약 코드패드에 명령문들을 입력하여 실행시킬 수 있습니다.'),\n",
+       " Document(id='637f948f-c624-481e-bae1-008ccad2583b', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 24, 'page_label': '25'}, page_content='코드패드에서는 사용자가 이전에 입력한 내용들에 대한 이력을 저장하고 있습니다. 상하 화살표를 \\n이용하여 이전에 입력한 내용을 손쉽게 다시 입력시킬 수 있을 뿐만 아니라, 이전에 입력했던 내용을 수정하여 재입력시킬 수도 있습니다.   요 약 입력이력을 사용하기 위해서는 상하 화살표를 사용하십시오.'),\n",
+       " Document(id='710475b6-635d-4002-bdc1-249c0b565eb4', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 1, 'page_label': '2'}, page_content='6.1. 코드패드 보기 ················································ ······························································· ··········· 21'),\n",
+       " Document(id='26fce9c2-c340-41b9-9601-ca4aa4c8142b', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 20, 'page_label': '21'}, page_content='코드패드 영역에는 표현식 또는 문장들을 입력할 수 있습니다. 키보드의 Enter를 누르면 \\n입력된 표현식 또는 문장이 라인단위로 평가되어 그 결과가 화면에 나타납니다.\\n그림 13 : 코드패드를 나타낸 메인화면  요 약  코드패드를 사용하기 위해 보기메뉴에서 코드패드보기(Show Code Pad)를 \\n 선택하십시오')]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_result['source_documents']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "query\n",
+      "result\n",
+      "source_documents\n"
+     ]
+    }
+   ],
    "source": [
     "for key in query_result.keys():\n",
     "    print(key)"
