--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -338,9 +338,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "langchain_core.documents.base.Document"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(type(query_result['source_documents']))\n",
     "type(query_result['source_documents'][0])"
@@ -348,9 +366,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'langchain_core.documents.base.Document'>\n",
+      "<class 'dict'>\n",
+      "{'id': '85c6f820-041e-4431-985a-4f37bb069775', 'metadata': {'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 1, 'page_label': '2'}, 'page_content': '6. 코드패드 사용하기 ··················································· ······························································· ········· 21', 'type': 'Document'}\n"
+     ]
+    }
+   ],
    "source": [
     "doc = query_result['source_documents'][0]\n",
     "print(type(doc))\n",
@@ -361,9 +389,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id\n",
+      "metadata\n",
+      "page_content\n",
+      "type\n"
+     ]
+    }
+   ],
    "source": [
     "for k in doc_dict:\n",
     "    print(k)"
@@ -371,11 +410,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "Qr0_iNsLTb6y"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "doc_dict['metadata']['title']"
    ]
@@ -386,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"소비자 부문 AI 활용사례 무엇인가요?\"\n",
+    "query = \"애플릿을 만들고 실행하는 방법을 설명해주세요\"\n",
     "query_result = chain.invoke(query)\n",
     "print(query_result)"
    ]
