--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -432,9 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'query': '애플릿을 만들고 실행하는 방법을 설명해주세요', 'result': '### BlueJ에서 애플릿 만들기 및 실행 방법 (문서 내용 기반)\\n\\n#### 1. 애플릿 만들기\\n1. **새 클래스 생성**  \\n   - BlueJ 메뉴에서 **`File > New Class`**를 선택하거나 툴바의 **`New Class` 버튼**을 클릭합니다.  \\n   - **`New Class` 대화상자**에서:  \\n     - 클래스 이름을 입력합니다.  \\n     - **`Type`** 드롭다운 메뉴에서 **`Applet`**을 선택합니다.  \\n     - **`OK`**를 클릭하여 애플릿 기본 골격을 생성합니다.  \\n   - 생성된 클래스는 `java.applet.Applet`을 상속받는 기본 코드로 구성됩니다.\\n\\n2. **애플릿 코드 작성**  \\n   - 생성된 클래스에 애플릿 동작을 정의하는 메서드(예: `paint(Graphics g)`)를 추가합니다.  \\n   - 문서에 구체적인 코드 예시는 없으나, 일반 클래스와 동일한 방식으로 편집 가능합니다.\\n\\n---\\n\\n#### 2. 애플릿 실행 방법\\n1. **예제 프로젝트 활용 (권장)**  \\n   - **`examples` 디렉토리**에서 **`appletdemo` 프로젝트**를 엽니다.  \\n   - 이 프로젝트는 미리 구성된 애플릿 예제를 포함합니다.  \\n\\n2. **직접 만든 애플릿 실행**  \\n   - 애플릿 클래스를 컴파일합니다(**`Compile` 버튼** 또는 우클릭 후 **`Compile`**).  \\n   - 컴파일 후, 애플릿 클래스를 더블클릭하거나 우클릭 메뉴에서 **`Run`**을 선택합니다.  \\n   - BlueJ는 내장된 HTML 뷰어를 통해 애플릿을 실행합니다.  \\n     - 실행 시 애플릿이 표시될 HTML 파일이 자동으로 생성되며, 별도의 웹 브라우저 없이 BlueJ 내에서 확인 가능합니다.\\n\\n---\\n\\n#### 3. 추가 참고 사항\\n- 문서에는 애플릿 실행을 위한 **HTML 태그** 또는 **매개변수 설정 방법**이 명시되지 않았습니다.  \\n- **`11.6. 애플릿 만들기`** 섹션은 페이지 번호(38)만 언급되어 있으며, 구체적인 내용은 문서에서 찾을 수 없습니다.  \\n\\n> 모든 단계는 제공된 문서 내용을 근거로 작성되었습니다.', 'source_documents': [Document(id='0033dc46-506a-4004-8455-b135353c83e8', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 2, 'page_label': '3'}, page_content='9.1. 애플릿 실행하기 ··············································· ······························································· ········ 32'), Document(id='71005c57-fd58-4b0c-9ec4-0defb2fd1b47', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 32, 'page_label': '33'}, page_content='일반 클래스처럼 애플릿이 포함된 새로운 클래스를 만드십시오. New Class대화상자에서 \\n타입을 선택할 수 있습니다. 컴파일을 하고 나서 애플릿을 실행시킵니다.\\n다른 클래스처럼 애플릿은 몇 가지 코드가 포함된 기본 클래스 골격으로 만들어집니다. 이'), Document(id='e686b4f2-5c8f-474d-b091-1c38f46543cd', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 31, 'page_label': '32'}, page_content='329. 애플릿 만들기\\n9.1. 애플릿 실행하기\\n   \\nBuleJ 는 어플리케이션 뿐만 아니라 애플릿을 만들고, 실행할 수 있습니다. 예제(examples) \\n디렉토리 안에는 애플릿 프로젝트가 있습니다. 우선 애플릿을 실행하기 위하여, 예제 디렉토리에서 appletdemo프로젝트를 오픈하십시오.'), Document(id='66539c24-5b21-4bc4-b4e0-aaf70fe7432d', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 2, 'page_label': '3'}, page_content='9.2. 애플릿 만들기 ················································ ······························································· ··········· 33'), Document(id='a04ba2d0-7f5b-49fb-9183-dc438dc1edb8', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 2, 'page_label': '3'}, page_content='9. 애플릿 만들기 ····················································· ······························································· ··············· 32'), Document(id='06856c04-90ce-4a88-af2c-a5c9234ba3da', metadata={'producer': 'Acrobat Distiller with ezUniHFT', 'creator': 'PScript5.dll Version 5.2', 'creationdate': '2005-04-26T15:21:34+09:00', 'moddate': '2005-04-26T15:21:34+09:00', 'author': 'Owner', 'title': '<426C75654AC7D1B1DBC6A9C5E4B8AEBEF3B9AEBCAD283230292E687770>', 'source': '../data/tutorial-korean.pdf', 'total_pages': 39, 'page': 2, 'page_label': '3'}, page_content='11.6.  애플릿 만들기 ·············································· ······························································· ········ 38')]}\n"
+     ]
+    }
+   ],
    "source": [
     "query = \"애플릿을 만들고 실행하는 방법을 설명해주세요\"\n",
     "query_result = chain.invoke(query)\n",
@@ -581,8 +589,8 @@
    "outputs": [],
    "source": [
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
-    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain_upstage import UpstageEmbeddings, ChatUpstage\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_community.vectorstores import FAISS\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain.prompts import ChatPromptTemplate\n",
