--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -598,12 +598,17 @@
     "\n",
     "# 1. PDF를 한 번만 로드하여 벡터 저장소 생성\n",
     "def initialize_retriever():\n",
+    "    pdf_path = \"../data/tutorial-korean.pdf\"\n",
     "    # PDF 파일을 로드하여 문서 객체로 변환\n",
-    "    loader = PyPDFLoader(\"data/how-to-use-AI-in-6industries.pdf\")\n",
+    "    loader = PyPDFLoader(pdf_path)\n",
     "    documents = loader.load()\n",
     "\n",
     "    # 문서를 일정한 크기로 분할 (chunk_size=1000, 중첩 없음)\n",
-    "    text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(\n",
+    "        chunk_size=200, \n",
+    "        chunk_overlap=0,\n",
+    "        separators=[\"\\n\\n\", \"\\n\", \".\", \"!\", \"?\", \",\", \" \", \"\"]\n",
+    "    )\n",
     "    texts = text_splitter.split_documents(documents)\n",
     "\n",
     "    # 문서의 텍스트를 벡터 임베딩으로 변환\n",
