--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -609,7 +609,7 @@
     "        chunk_overlap=0,\n",
     "        separators=[\"\\n\\n\", \"\\n\", \".\", \"!\", \"?\", \",\", \" \", \"\"]\n",
     "    )\n",
-    "    texts = text_splitter.split_documents(documents)\n",
+    "    texts = loader.load_and_split(text_splitter=text_splitter)\n",
     "\n",
     "    # 문서의 텍스트를 벡터 임베딩으로 변환\n",
     "    embeddings = OpenAIEmbeddings()\n",
