--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -586,7 +586,15 @@
    "metadata": {
     "id": "Yl_SXA37i4p5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tags=['FAISS', 'UpstageEmbeddings'] vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x000001A270EE3EF0> search_kwargs={'k': 6}\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.document_loaders import PyPDFLoader\n",
     "from langchain_upstage import UpstageEmbeddings, ChatUpstage\n",
@@ -612,15 +620,32 @@
     "    texts = loader.load_and_split(text_splitter=text_splitter)\n",
     "\n",
     "    # 문서의 텍스트를 벡터 임베딩으로 변환\n",
-    "    embeddings = OpenAIEmbeddings()\n",
+    "    embeddings = UpstageEmbeddings(model=\"solar-embedding-1-large\")\n",
+    "\n",
     "    # 변환된 벡터를 FAISS 벡터 저장소에 저장\n",
     "    vector_store = FAISS.from_documents(texts, embeddings)\n",
+    "    vector_store.save_local(\"../db/faiss_db\")\n",
     "    # 저장된 벡터를 검색할 수 있는 retriever 생성 (유사한 문서 2개 검색)\n",
-    "    retriever = vector_store.as_retriever(search_type=\"similarity\", search_kwargs={\"k\": 2})\n",
+    "    retriever = vector_store.as_retriever(\n",
+    "        search_type=\"similarity\", \n",
+    "        search_kwargs={\"k\": 6}\n",
+    "    )\n",
     "    return retriever\n",
     "\n",
     "# 2. 전역 retriever 생성 (앱 시작 시 한 번만 실행)\n",
     "retriever = initialize_retriever()\n",
+    "\n",
+    "retrieved_docs = retriever.invoke(\"코드패드는 무엇이고 어떻게 사용하나요?\")\n",
+    "for doc in retrieved_docs:\n",
+    "    print(doc.page_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# 3. 채팅 응답 함수 (retriever를 재사용)\n",
     "def chat_respond(message, chat_history):\n",
