--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "id": "Yl_SXA37i4p5"
    },
@@ -591,7 +591,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tags=['FAISS', 'UpstageEmbeddings'] vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x000001A270EE3EF0> search_kwargs={'k': 6}\n"
+      "6. 코드패드 사용하기 ··················································· ······························································· ········· 21\n",
+      "216. 코드패드의 사용\n",
+      "BlueJ 코드패드는 자바 코드(표현식과 명령문)의 일부분을 쉽고 빠르게 평가할 수 있는 기능을 \n",
+      "제공합니다. 따라서, 코드패드는 자바언어로 작성된 프로그램 코드의 의미를 상세히 조사하거나 구문을 예증하고 시험하는데 사용할 수 있 습니다.\n",
+      "6.1. 코드패드 나타내기\n",
+      "요 약 코드패드에 명령문들을 입력하여 실행시킬 수 있습니다.\n",
+      "코드패드에서는 사용자가 이전에 입력한 내용들에 대한 이력을 저장하고 있습니다. 상하 화살표를 \n",
+      "이용하여 이전에 입력한 내용을 손쉽게 다시 입력시킬 수 있을 뿐만 아니라, 이전에 입력했던 내용을 수정하여 재입력시킬 수도 있습니다.   요 약 입력이력을 사용하기 위해서는 상하 화살표를 사용하십시오.\n",
+      "6.1. 코드패드 보기 ················································ ······························································· ··········· 21\n",
+      "코드패드 영역에는 표현식 또는 문장들을 입력할 수 있습니다. 키보드의 Enter를 누르면 \n",
+      "입력된 표현식 또는 문장이 라인단위로 평가되어 그 결과가 화면에 나타납니다.\n",
+      "그림 13 : 코드패드를 나타낸 메인화면  요 약  코드패드를 사용하기 위해 보기메뉴에서 코드패드보기(Show Code Pad)를 \n",
+      " 선택하십시오\n"
      ]
     }
    ],
@@ -650,14 +662,21 @@
     "# 3. 채팅 응답 함수 (retriever를 재사용)\n",
     "def chat_respond(message, chat_history):\n",
     "    #  시스템 메시지 템플릿: 문서 요약을 기반으로 질문에 답변하도록 설정\n",
-    "    system_template = \"\"\"Use the following pieces of context to answer the user's question shortly.\n",
-    "    Given the following summaries of a long document and a question, create a final answer with references (\"SOURCES\"), \n",
-    "    use \"SOURCES\" in capital letters regardless of the number of sources.\n",
-    "    If you don't know the answer, just say that \"I don't know\", don't try to make up an answer.\n",
-    "    ----------------\n",
-    "    {summaries}\n",
-    "    \n",
-    "    You MUST answer in Korean and in Markdown format:\n",
+    "    system_template = \"\"\"당신은 BlueJ 프로그래밍 환경 전문가입니다. \n",
+    "        아래 문서 내용을 바탕으로 정확하고 친절한 답변을 제공해주세요.\n",
+    "\n",
+    "        문서 내용:\n",
+    "        {context}\n",
+    "\n",
+    "        질문: {question}\n",
+    "\n",
+    "        답변 규칙:\n",
+    "        1. 문서 내용만을 근거로 답변하세요\n",
+    "        2. 단계별 설명이 필요하면 순서대로 작성하세요  \n",
+    "        3. 구체적인 메뉴명, 버튼명을 포함하세요\n",
+    "        4. 문서에 없는 정보는 \"문서에서 찾을 수 없습니다\"라고 하세요\n",
+    "\n",
+    "        답변:\n",
     "    \"\"\"\n",
     "    # 사용자 질문을 받아 최종 Prompt 구성\n",
     "    prompt = ChatPromptTemplate.from_messages([\n",
