--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -686,11 +686,14 @@
     "\n",
     "    chain_type_kwargs = {\n",
     "        \"prompt\": prompt, #  LLM이 사용할 프롬프트 지정\n",
-    "        \"document_variable_name\": \"summaries\", #  문서 요약 데이터를 LLM에 전달할 변수 이름\n",
+    "        \"document_variable_name\": \"context\", #  문서 요약 데이터를 LLM에 전달할 변수 이름\n",
     "    }\n",
     "    \n",
-    "    # OpenAI 모델 (GPT-3.5-turbo) 설정\n",
-    "    llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
+    "    llm = ChatUpstage(\n",
+    "        model=\"solar-pro\",\n",
+    "        base_url=\"https://api.upstage.ai/v1\",\n",
+    "        temperature=0.5\n",
+    "    )\n",
     "    \n",
     "    # RetrievalQA 체인 생성\n",
     "    chain = RetrievalQA.from_chain_type(\n",
