--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0f39f32b",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
     "print(type(tool_message))\n",
     "\n",
     "# 특정 속성들만 확인\n",
-    "print(\"\\n=== 주요 속성들 ===\")\n",
+    "print(\"\\n=== ToolMessage 객체의 주요 속성들 ===\")\n",
     "attributes = ['content', 'tool_call_id', 'name', 'type', 'additional_kwargs']\n",
     "for attr in attributes:\n",
     "    if hasattr(tool_message, attr):\n",
@@ -747,11 +747,24 @@
    "execution_count": null,
    "id": "40ca35d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpt-4o-mini\n",
+      "<class 'langchain_core.runnables.base.RunnableBinding'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(llm.model_name)\n",
     "llm_with_tools = llm.bind_tools(tools=[tavily_search_func])\n",
-    "print(type(llm_with_tools))\n"
+    "print(type(llm_with_tools))\n",
+    "\n",
+    "query = \"최근에 가장 인기있는 파스타 식당을 추천해주세요\"\n",
+    "ai_message = llm_with_tools.invoke(query)\n",
+    "print(ai_message.content)"
    ]
   },
   {
