--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -753,18 +753,27 @@
      "output_type": "stream",
      "text": [
       "gpt-4o-mini\n",
-      "<class 'langchain_core.runnables.base.RunnableBinding'>\n"
+      "<class 'langchain_core.runnables.base.RunnableBinding'>\n",
+      "[{'name': 'tavily_search_func', 'args': {'query': '2023년 인기 파스타 식당 추천'}, 'id': 'call_ifp0FxCPpYY3NniW2v6m7e7F', 'type': 'tool_call'}]\n",
+      "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_ifp0FxCPpYY3NniW2v6m7e7F', 'function': {'arguments': '{\"query\":\"2023년 인기 파스타 식당 추천\"}', 'name': 'tavily_search_func'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 25, 'prompt_tokens': 69, 'total_tokens': 94, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_560af6e559', 'id': 'chatcmpl-CJU6tnTKzgM315eIVXF4ftj5QCPEY', 'service_tier': 'default', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--c819aacc-1ddf-4752-be67-3289127f457d-0', tool_calls=[{'name': 'tavily_search_func', 'args': {'query': '2023년 인기 파스타 식당 추천'}, 'id': 'call_ifp0FxCPpYY3NniW2v6m7e7F', 'type': 'tool_call'}], usage_metadata={'input_tokens': 69, 'output_tokens': 25, 'total_tokens': 94, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n"
      ]
     }
    ],
    "source": [
+    "from pprint import pprint\n",
+    "\n",
     "print(llm.model_name)\n",
     "llm_with_tools = llm.bind_tools(tools=[tavily_search_func])\n",
     "print(type(llm_with_tools))\n",
     "\n",
     "query = \"최근에 가장 인기있는 파스타 식당을 추천해주세요\"\n",
     "ai_message = llm_with_tools.invoke(query)\n",
-    "print(ai_message.content)"
+    "print(ai_message.tool_calls)\n",
+    "\n",
+    "pprint(ai_message)\n",
+    "\n",
+    "tool_message = tavily_search_func.invoke(ai_message.tool_calls[0])\n",
+    "print(tool_message)"
    ]
   },
   {
