--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -730,10 +730,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "ed7ff3c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'langchain_core.documents.base.Document'>\n",
+      "https://ko.wikipedia.org/wiki/%EC%9D%B4%ED%83%88%EB%A6%AC%EC%95%84_%EC%9A%94%EB%A6%AC\n",
+      "이탈리아 요리(Italia 料理, 이탈리아어: cucina italiana 쿠치나 이탈리아나[*])는 남유럽에 있는 이탈리아의 요리이다. 기원전 4세기부터 다양한 사회·정치 변화와\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "https://ko.wikipedia.org/wiki/%EC%98%A4%EB%A5%B4%EC%A1%B0\n",
+      "오르조(이탈리아어: orzo) 또는 리소니(이탈리아어: risoni, 단수: risone 리소네[*])는 이탈리아의 파스타이다. \"오르조\"는 라틴어:hordeum에서 유래했으며 \"\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# 위키 검색 Tool 호출\n",
     "query = \"파스타의 유래\"\n",
@@ -743,7 +757,8 @@
     "\n",
     "# 검색 결과 출력\n",
     "for result in wiki_results:\n",
-    "    print(result)  \n",
+    "    print(result.metadata['source'])  \n",
+    "    print(result.page_content[:100])\n",
     "    print(\"-\" * 100)  "
    ]
   },
