--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -829,10 +829,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "4a7ab14a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'langchain_core.runnables.base.RunnableSequence'>\n",
+      "('이탈리아 요리는 기원전 4세기부터 발전해온 남유럽의 전통 요리로, 지역마다 특색이 있으며 북부는 쌀과 유제품, 남부는 올리브와 해산물을 '\n",
+      " '주로 사용한다. 이 요리는 간결함과 재료의 질이 중요하며, 치즈와 포도주가 주요 요소로 자리잡고 있다. 또한, 역사적으로 다양한 문화적 '\n",
+      " '영향을 받아왔으며, 여러 저술이 이탈리아 요리의 발전에 기여했다. CNN은 2013년 이탈리아 요리를 세계 최고의 요리로 선정했다. '\n",
+      " '오르조(리소니)는 이탈리아의 파스타 종류로, 큰 쌀알 모양을 하고 있으며 주로 수프와 함께 소비된다.')\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
@@ -863,6 +875,7 @@
     "    {\"context\": RunnableLambda(wiki_search_and_summarize)}\n",
     "    | summary_prompt | llm | StrOutputParser() \n",
     ")\n",
+    "print(type(summary_chain))\n",
     "\n",
     "# 요약 테스트 \n",
     "summarized_text = summary_chain.invoke({\"query\":\"파스타의 유래\"})\n",
@@ -871,10 +884,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "a35ac080",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "자료형: \n",
+      "<class 'langchain_core.tools.structured.StructuredTool'>\n",
+      "1 ----------------------------------------------------------------------------------------------------\n",
+      "name: \n",
+      "wiki_summary\n",
+      "2 ----------------------------------------------------------------------------------------------------\n",
+      "description: \n",
+      "('Use this tool when you need to search for information on Wikipedia.\\n'\n",
+      " \"It searches for Wikipedia articles related to the user's query and returns\\n\"\n",
+      " 'a summarized text. This tool is useful when general knowledge\\n'\n",
+      " 'or background information is required.')\n",
+      "3 ----------------------------------------------------------------------------------------------------\n",
+      "schema: \n",
+      "{'description': 'Input schema for Wikipedia search.',\n",
+      " 'properties': {'query': {'description': 'The query to search for in Wikipedia',\n",
+      "                          'title': 'Query',\n",
+      "                          'type': 'string'}},\n",
+      " 'required': ['query'],\n",
+      " 'title': 'WikiSummarySchema',\n",
+      " 'type': 'object'}\n",
+      "4 ----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "from pydantic import BaseModel, Field                           # 데이터 유효성 검사 및 스키마 정의를 위한 Pydantic\n",
     "from typing import List                                         # 타입 힌트를 위한 List\n",
@@ -918,10 +959,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "78824759",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_iLghT3PtFeeyPNmmo60ZuQCh', 'function': {'arguments': '{\"query\": \"서울 강남 파스타 맛집\"}', 'name': 'tavily_search_func'}, 'type': 'function'}, {'id': 'call_X3YL5pUsZe9SUAPtGS0kNgbZ', 'function': {'arguments': '{\"query\": \"파스타\"}', 'name': 'wiki_summary'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 55, 'prompt_tokens': 152, 'total_tokens': 207, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_51db84afab', 'id': 'chatcmpl-CJVdhUP5sPTRlZwLTECKh9Oc3NO4j', 'service_tier': 'default', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--1509517b-607c-4327-97c9-bf77bc895a65-0', tool_calls=[{'name': 'tavily_search_func', 'args': {'query': '서울 강남 파스타 맛집'}, 'id': 'call_iLghT3PtFeeyPNmmo60ZuQCh', 'type': 'tool_call'}, {'name': 'wiki_summary', 'args': {'query': '파스타'}, 'id': 'call_X3YL5pUsZe9SUAPtGS0kNgbZ', 'type': 'tool_call'}], usage_metadata={'input_tokens': 152, 'output_tokens': 55, 'total_tokens': 207, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "''\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "[{'args': {'query': '서울 강남 파스타 맛집'},\n",
+      "  'id': 'call_iLghT3PtFeeyPNmmo60ZuQCh',\n",
+      "  'name': 'tavily_search_func',\n",
+      "  'type': 'tool_call'},\n",
+      " {'args': {'query': '파스타'},\n",
+      "  'id': 'call_X3YL5pUsZe9SUAPtGS0kNgbZ',\n",
+      "  'name': 'wiki_summary',\n",
+      "  'type': 'tool_call'}]\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# LLM에 도구를 바인딩\n",
     "llm_with_tools = llm.bind_tools(tools=[tavily_search_func, wiki_summary])\n",
@@ -945,20 +1006,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "c87d0b1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'wiki_summary',\n",
+       " 'args': {'query': '파스타'},\n",
+       " 'id': 'call_X3YL5pUsZe9SUAPtGS0kNgbZ',\n",
+       " 'type': 'tool_call'}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ai_msgs.tool_calls[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "12cbdd5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='Pasta is a staple Italian food made from durum wheat semolina and water, shaped into various forms and cooked. The term \"pasta\" comes from the Italian word for \"dough\" and has historical roots dating back to ancient civilizations. Its exact origins are debated, with traditions suggesting influences from ancient Greece and Arab cultures. Pasta comes in two main types: dried pasta (made from durum wheat) and fresh pasta (often made with eggs), each comprising numerous shapes and regional variations.\\n\\nCarbonara is a Roman pasta dish made with egg yolks, hard cheese, cured pork, and pepper, gaining its modern form in the mid-20th century. The exact origins and name of carbonara are unclear, but it is commonly believed to have been inspired by the food of coal miners. Traditional preparations use specific ingredients like guanciale and Pecorino Romano cheese, while variations exist that incorporate cream and other additions, particularly in international adaptations.' name='wiki_summary' tool_call_id='call_X3YL5pUsZe9SUAPtGS0kNgbZ'\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "('Pasta is a staple Italian food made from durum wheat semolina and water, '\n",
+      " 'shaped into various forms and cooked. The term \"pasta\" comes from the '\n",
+      " 'Italian word for \"dough\" and has historical roots dating back to ancient '\n",
+      " 'civilizations. Its exact origins are debated, with traditions suggesting '\n",
+      " 'influences from ancient Greece and Arab cultures. Pasta comes in two main '\n",
+      " 'types: dried pasta (made from durum wheat) and fresh pasta (often made with '\n",
+      " 'eggs), each comprising numerous shapes and regional variations.\\n'\n",
+      " '\\n'\n",
+      " 'Carbonara is a Roman pasta dish made with egg yolks, hard cheese, cured '\n",
+      " 'pork, and pepper, gaining its modern form in the mid-20th century. The exact '\n",
+      " 'origins and name of carbonara are unclear, but it is commonly believed to '\n",
+      " 'have been inspired by the food of coal miners. Traditional preparations use '\n",
+      " 'specific ingredients like guanciale and Pecorino Romano cheese, while '\n",
+      " 'variations exist that incorporate cream and other additions, particularly in '\n",
+      " 'international adaptations.')\n"
+     ]
+    }
+   ],
    "source": [
     "# 도구 실행 \n",
     "tool_message = wiki_summary.invoke(ai_msgs.tool_calls[1])\n",
@@ -1035,10 +1134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "a0da1d76",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.document_loaders import TextLoader\n",
     "\n",
@@ -1051,10 +1158,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "5e94154e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "총 10개의 메뉴 항목이 처리되었습니다.\n",
+      "\n",
+      "메뉴 번호: 1\n",
+      "메뉴 이름: 시그니처 스테이크\n",
+      "내용:\n",
+      "1. 시그니처 스테이크\n",
+      "   • 가격: ₩35,000\n",
+      "   • 주요 식재료: 최상급 한우 등심, 로즈메리 감자, 그릴드 아스파라거스\n",
+      "   • 설명: 셰프의 특제 시그니처 메뉴로, ...\n",
+      "\n",
+      "메뉴 번호: 2\n",
+      "메뉴 이름: 트러플 리조또\n",
+      "내용:\n",
+      "2. 트러플 리조또\n",
+      "   • 가격: ₩22,000\n",
+      "   • 주요 식재료: 이탈리아산 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈\n",
+      "   • 설명: 크리미한 텍스처의 리조...\n"
+     ]
+    }
+   ],
    "source": [
     "# 문서 분할 (Chunking)\n",
     "# 이 함수는 긴 문서(document)를 더 작은 단위인 '메뉴 항목(menu_items)'으로 분할합니다.\n",
@@ -1113,7 +1244,7 @@
     "            }\n",
     "        )\n",
     "        \n",
-    "        # 새로 생성한 Document 객체를 리스트에 추가합니다.\n",
+    "        # 새로 생성한 Document 객체를 리스트에 추가합니다. List[Document]\n",
     "        menu_documents.append(menu_doc)\n",
     "    \n",
     "    # 모든 메뉴 항목이 Document 객체로 변환된 리스트를 반환합니다.\n",
@@ -1149,7 +1280,27 @@
    "execution_count": null,
    "id": "8552797f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "검색 결과: 4개\n",
+      "메뉴 번호: 1\n",
+      "메뉴 이름: 시그니처 스테이크\n",
+      "\n",
+      "메뉴 번호: 8\n",
+      "메뉴 이름: 안심 스테이크 샐러드\n",
+      "\n",
+      "메뉴 번호: 4\n",
+      "메뉴 이름: 버섯 크림 수프\n",
+      "\n",
+      "메뉴 번호: 9\n",
+      "메뉴 이름: 치킨 콘피\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.vectorstores import FAISS\n",
     "from langchain_ollama import OllamaEmbeddings\n",
@@ -1160,7 +1311,7 @@
     "\n",
     "# FAISS 인덱스 생성\n",
     "menu_db = FAISS.from_documents(\n",
-    "    documents=menu_documents, \n",
+    "    documents=menu_documents,  #List[Document]\n",
     "    embedding=embeddings_model\n",
     ")\n",
     "\n",
@@ -1170,11 +1321,13 @@
     "\n",
     "# Retriever 생성\n",
     "menu_retriever = menu_db.as_retriever(\n",
-    "    search_kwargs={'k': 4},\n",
+    "    search_type=\"mmr\",\n",
+    "    #search_kwargs={\"k\": 4}\n",
+    "    search_kwargs={\"k\": 4, \"fetch_k\": 6}\n",
     ")\n",
     "\n",
     "# 쿼리 테스트\n",
-    "query = \"시그니처 스테이크의 가격과 특징은 무엇인가요?\"\n",
+    "query = \"스테이크의 가격과 특징은 무엇인가요?\"\n",
     "docs = menu_retriever.invoke(query)\n",
     "print(f\"검색 결과: {len(docs)}개\")\n",
     "\n",
