--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "8552797f",
    "metadata": {},
    "outputs": [
@@ -1350,20 +1350,57 @@
    "execution_count": null,
    "id": "1dc82b06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "총 10개의 메뉴 항목이 처리되었습니다.\n",
+      "\n",
+      "메뉴 번호: 1\n",
+      "메뉴 이름: 샤토 마고 2015\n",
+      "내용:\n",
+      "1. 샤토 마고 2015\n",
+      "   • 가격: ₩450,000\n",
+      "   • 주요 품종: 카베르네 소비뇽, 메를로, 카베르네 프랑, 쁘띠 베르도\n",
+      "   • 설명: 보르도 메독 지역의 프리미엄 ...\n",
+      "\n",
+      "메뉴 번호: 2\n",
+      "메뉴 이름: 돔 페리뇽 2012\n",
+      "내용:\n",
+      "2. 돔 페리뇽 2012\n",
+      "   • 가격: ₩380,000\n",
+      "   • 주요 품종: 샤르도네, 피노 누아\n",
+      "   • 설명: 프랑스 샴페인의 대명사로 알려진 프레스티지 큐베입니다. 시트러스...\n",
+      "검색 결과: 4개\n",
+      "메뉴 번호: 1\n",
+      "메뉴 이름: 시그니처 스테이크\n",
+      "\n",
+      "메뉴 번호: 8\n",
+      "메뉴 이름: 안심 스테이크 샐러드\n",
+      "\n",
+      "메뉴 번호: 3\n",
+      "메뉴 이름: 연어 타르타르\n",
+      "\n",
+      "메뉴 번호: 2\n",
+      "메뉴 이름: 트러플 리조또\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 와인 메뉴 텍스트 데이터를 로드\n",
     "loader = TextLoader(\"../data/restaurant_wine.txt\", encoding=\"utf-8\")\n",
     "documents = loader.load()\n",
     "\n",
     "# 메뉴 항목 분리 실행\n",
-    "menu_documents = []\n",
+    "wine_documents = []\n",
     "for doc in documents:\n",
-    "    menu_documents += split_menu_items(doc)\n",
+    "    wine_documents += split_menu_items(doc)\n",
     "\n",
     "# 결과 출력\n",
-    "print(f\"총 {len(menu_documents)}개의 메뉴 항목이 처리되었습니다.\")\n",
-    "for doc in menu_documents[:2]:\n",
+    "print(f\"총 {len(wine_documents)}개의 메뉴 항목이 처리되었습니다.\")\n",
+    "for doc in wine_documents[:2]:\n",
     "    print(f\"\\n메뉴 번호: {doc.metadata['menu_number']}\")\n",
     "    print(f\"메뉴 이름: {doc.metadata['menu_name']}\")\n",
     "    print(f\"내용:\\n{doc.page_content[:100]}...\")\n",
@@ -1371,7 +1408,7 @@
     "\n",
     "# FAISS 인덱스 생성\n",
     "wine_db = FAISS.from_documents(\n",
-    "    documents=menu_documents, \n",
+    "    documents=wine_documents, \n",
     "    embedding=embeddings_model\n",
     ")\n",
     "\n",
